# concurrency

./: .env  .gitignore  .sqlite_history  Cargo.toml  fmc.sqlite  fmc.sqlite-shm  fmc.sqlite-wal  links.txt  standards.txt
.sqlx/: query-ee6f5cf5f19ee25957c239e0e8494dd74245c92693fab042565580fa10988d01.json
sql/: create_fm.sql  create_user.sql
src/: lib.rs  main.rs
