[package]
name = "ccr"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "*", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }

tokio = { version = "*", features = ["full"] }
dotenvy = "*"
log = "*"
env_logger = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
